[tool.poetry]
name = "pyconceptlibraryclient"
version = "0.1.0"
description = "Python API Client for Concept Library/HDR UK Phenotype Library"
authors = ["SAIL Dev Team"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
